--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-/*  Recreació del lloc web redis amb maquetació grid
+<!--  Recreació del lloc web redis amb maquetació grid
     
-    Xavi Blanes - curs 24/25                        */    
+    Xavi Blanes - curs 24/25                          -->    
 
 <!DOCTYPE html>
 <html>
